gitops-repo/base/networking/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nginx-gateway-for-all
  namespace: go-db-app-dev
spec:
  gatewayClassName: nginx
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All # <--- CRITICAL: This allows go-db-app-canary-ns to attach
